<resources>
    <string name="app_name">covid 360</string>
    <string name="across_india_title">Across India</string>
    <string name="edit_text_hint_search_state">Search states</string>
    <string name="text_view_title_all_states_ut_stats">All State/UT Stats</string>
    <string name="tv_heading_active_cases">Active</string>
    <string name="tv_heading_recovered_cases">Recovered</string>
    <string name="tv_heading_deaths">Deaths</string>
    <string name="tv_heading_confirmed_cases">Confirmed</string>
    <string name="tv_main_title_cardView">Across India</string>
    <string name="tv_row_state_title">Delhi</string>
</resources>